Fix alignment of the-villas section.

--- a/css/index.css
+++ b/css/index.css
@@ -210,7 +210,7 @@ table {
 }
 .main-content .recent-projects .the-villas {
   margin-top: 45px;
-  position: absolute;
+  margin-bottom: 98px;
 }
 .main-content .recent-projects .the-villas .grey-square {
   background-color: #D8D8D8;
@@ -219,24 +219,24 @@ table {
   letter-spacing: 6px;
   color: #222;
   width: 315px;
-  height: 90px;
-  line-height: 90px;
+  height: 94px;
+  line-height: 94px;
   text-align: center;
-  position: absolute;
+  position: relative;
   left: 538px;
-  top: 173px;
+  top: -60px;
 }
 .main-content .recent-projects .the-villas .text {
-  padding-top: 65px;
   width: 480px;
   margin-left: 202px;
   letter-spacing: 1px;
 }
 .main-content .recent-projects .the-villas .text p {
+  margin-top: -8px;
   font-weight: normal;
   font-size: 16px;
   line-height: 24px;
-  margin-top: 22px;
+  margin-bottom: 32px;
   width: 92%;
 }
 body {
