--- a/less/main-content.less
+++ b/less/main-content.less
@@ -70,7 +70,7 @@
 
         .the-villas {
             margin-top: 45px;
-            position: absolute;
+            margin-bottom: 98px;
 
             .grey-square {
                 background-color: @grey-square-bg-color;
@@ -79,28 +79,29 @@
                 letter-spacing: 6px;
                 color: @soft-black;
                 width: 315px;
-                height: 90px;
-                line-height: 90px;
+                height: 94px;
+                line-height: 94px;
                 text-align: center;
-                position: absolute;
+                position: relative;
                 left: 538px;
-                top: 173px;
+                top: -60px;
             }
 
             .text {
-                padding-top: 65px;
+                //padding-top: 65px;
                 width: 480px;
                 margin-left: 202px;
                 letter-spacing: 1px;
     
                 p {
+                    margin-top: -8px;
                     font-weight: normal;
                     font-size: 16px;
                     line-height: 24px;
-                    margin-top: 22px;
+                    margin-bottom: 32px;
                     width: 92%;
                 }
             }
-        }
+        } // .the-villas
     } // .recent-projects
 } // .main-body
